--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ bevy = "0.4.0"
 bevy_mod_picking = "0.3"
 bevy_4x_camera = "0.1.*"
 bevy_rapier3d = "0.8.0"
+bevy_fly_camera = "0.6.0"
+interpolation = "0.2.0"
